# openclopenbenchmark

./: .gitignore  CMakeLists.txt  README.md
driver/: main.cpp  ocl_wrapper.cpp
include/: ocl_wrapper.h
tests/arithmetic/: fma_test.ocl  hct_4x4.ocl  hct_4x4_v2.ocl  hct_4x4_v3.ocl  hct_4x4_v4.ocl  ieee_sin.ocl  lfsr_64.ocl  mad_double_test.ocl  mad_test.ocl
tests/control/: barrier_local_sync.ocl  barrier_sync.ocl  barrier_sync2.ocl  branch1.ocl  branch2.ocl
tests/image/: convolution_2d.ocl  convolution_2d_7x7.ocl  parallel_projection_2d.ocl  parallel_projection_x_3d.ocl  parallel_projection_y_2d.ocl  parallel_projection_y_3d.ocl  parallel_projection_z_3d.ocl  random_projection_2d.ocl  random_projection_3d.ocl
tests/memory/: atom_add_1d.ocl  atom_add_conv.ocl  local_mix.ocl  rand_read_1d.ocl  rand_write_1d.ocl  rev_1d_copy.ocl  rev_1d_copy2.ocl  simple_transp.ocl  straight_1d.ocl  write_1d.ocl
utils/: get_name  splitter  wrap_main_gen
